--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Makaan - Real Estate HTML Template</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keyword">
+    <meta content="" name="key">
     <meta content="" name="description">
 
     <!-- Favicon -->
